Code plus propre...